Fixed minor alignment with append/prepend inputs

--- a/platforms/common/css-compiled/g-admin.css
+++ b/platforms/common/css-compiled/g-admin.css
@@ -2973,7 +2973,7 @@ i.fa-gantry, i.fa-gantry-logo, i.fa-gantry-symbol, i.fa-gantry-logo-both, i.fa-g
   height: auto;
   max-width: 100%;
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1.6rem;
   border-radius: 0.1875rem;
   vertical-align: middle;
 }
